--- a/Obi/Obi/Dialogs/AssignSpecialNodeMark.es.resx
+++ b/Obi/Obi/Dialogs/AssignSpecialNodeMark.es.resx
@@ -238,7 +238,7 @@
     <value>1</value>
   </data>
   <data name="m_rdb_btn_SpecialPhrase.Text" xml:space="preserve">
-    <value>Notas opcionales</value>
+    <value>Skippable notes</value>
   </data>
   <data name="&gt;&gt;m_rdb_btn_SpecialPhrase.Name" xml:space="preserve">
     <value>m_rdb_btn_SpecialPhrase</value>
@@ -286,7 +286,7 @@
     <value>True</value>
   </data>
   <data name="m_rtb_btn_AudioProcessing.Location" type="System.Drawing.Point, System.Drawing">
-    <value>280, 19</value>
+    <value>270, 19</value>
   </data>
   <data name="m_rtb_btn_AudioProcessing.Size" type="System.Drawing.Size, System.Drawing">
     <value>107, 17</value>
@@ -295,7 +295,7 @@
     <value>3</value>
   </data>
   <data name="m_rtb_btn_AudioProcessing.Text" xml:space="preserve">
-    <value>Audio Processing</value>
+    <value>Procesando el Audio</value>
   </data>
   <data name="&gt;&gt;m_rtb_btn_AudioProcessing.Name" xml:space="preserve">
     <value>m_rtb_btn_AudioProcessing</value>
