--- a/Obi/Obi/Dialogs/EditRoles.es.resx
+++ b/Obi/Obi/Dialogs/EditRoles.es.resx
@@ -235,7 +235,7 @@
     <value>4</value>
   </data>
   <data name="mOk.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>A&amp;ceptar</value>
   </data>
   <data name="&gt;&gt;mOk.Name" xml:space="preserve">
     <value>mOk</value>
@@ -301,7 +301,7 @@
     <value>1</value>
   </data>
   <data name="mAdd.Text" xml:space="preserve">
-    <value>Aña&amp;dir</value>
+    <value>&amp;Añadir</value>
   </data>
   <data name="&gt;&gt;mAdd.Name" xml:space="preserve">
     <value>mAdd</value>
@@ -620,7 +620,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Editar roles</value>
+    <value>Cambiar roles</value>
   </data>
   <data name="&gt;&gt;helpProvider1.Name" xml:space="preserve">
     <value>helpProvider1</value>
