--- a/Obi/Obi/Dialogs/GoToPageOrPhrase.es.resx
+++ b/Obi/Obi/Dialogs/GoToPageOrPhrase.es.resx
@@ -295,7 +295,7 @@
     <value>7</value>
   </data>
   <data name="m_btnOk.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>A&amp;ceptar</value>
   </data>
   <data name="&gt;&gt;m_btnOk.Name" xml:space="preserve">
     <value>m_btnOk</value>
