--- a/trunk/Obi/Obi/Dialogs/MergeProject.es.resx
+++ b/trunk/Obi/Obi/Dialogs/MergeProject.es.resx
@@ -124,7 +124,7 @@
     <value>True</value>
   </metadata>
   <data name="mbtnDesendingOrder.AccessibleName" xml:space="preserve">
-    <value>O. Desc.</value>
+    <value>Orden descendente</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="mbtnDesendingOrder.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
@@ -145,7 +145,7 @@
     <value>9</value>
   </data>
   <data name="mbtnDesendingOrder.Text" xml:space="preserve">
-    <value>O. D&amp;escendente</value>
+    <value>Orden D&amp;escendente</value>
   </data>
   <data name="&gt;&gt;mbtnDesendingOrder.Name" xml:space="preserve">
     <value>mbtnDesendingOrder</value>
@@ -160,7 +160,7 @@
     <value>0</value>
   </data>
   <data name="lstManualArrange.AccessibleName" xml:space="preserve">
-    <value>Lista de archivos del proyecto</value>
+    <value>Lista archivos del proyecto</value>
   </data>
   <data name="lstManualArrange.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 9.75pt</value>
@@ -196,10 +196,10 @@
     <value>2</value>
   </data>
   <data name="m_grpArrangeAudioFiles.AccessibleName" xml:space="preserve">
-    <value>Organizar archivos</value>
+    <value>Organizar los archivos de audio:</value>
   </data>
   <data name="mbtnAscendingOrder.AccessibleName" xml:space="preserve">
-    <value>O. Asc.</value>
+    <value>Orden ascendente</value>
   </data>
   <data name="mbtnAscendingOrder.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -250,7 +250,7 @@
     <value>7</value>
   </data>
   <data name="m_grpArrangeAudioFiles.Text" xml:space="preserve">
-    <value>Organizar archivos:</value>
+    <value>Organizar archivos.</value>
   </data>
   <data name="&gt;&gt;m_grpArrangeAudioFiles.Name" xml:space="preserve">
     <value>m_grpArrangeAudioFiles</value>
@@ -265,7 +265,7 @@
     <value>1</value>
   </data>
   <data name="m_grpAddFiles.AccessibleName" xml:space="preserve">
-    <value>Grupo para añadir y organizar archivos</value>
+    <value>Grupo para Añadir y Organizar archivos</value>
   </data>
   <data name="m_btnRemove.AccessibleName" xml:space="preserve">
     <value>Eliminar</value>
@@ -325,7 +325,7 @@
     <value>5</value>
   </data>
   <data name="m_btnAdd.Text" xml:space="preserve">
-    <value>Aña&amp;dir</value>
+    <value>&amp;Añadir</value>
   </data>
   <data name="&gt;&gt;m_btnAdd.Name" xml:space="preserve">
     <value>m_btnAdd</value>
@@ -340,7 +340,7 @@
     <value>3</value>
   </data>
   <data name="m_btnMoveUp.AccessibleName" xml:space="preserve">
-    <value>Mov. Arriba</value>
+    <value>Mover arriba</value>
   </data>
   <data name="m_btnMoveUp.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 9.75pt</value>
@@ -361,7 +361,7 @@
     <value>3</value>
   </data>
   <data name="m_btnMoveUp.Text" xml:space="preserve">
-    <value>Mover arri&amp;ba</value>
+    <value>Mover &amp;arriba</value>
   </data>
   <data name="&gt;&gt;m_btnMoveUp.Name" xml:space="preserve">
     <value>m_btnMoveUp</value>
@@ -376,7 +376,7 @@
     <value>4</value>
   </data>
   <data name="m_btnMoveDown.AccessibleName" xml:space="preserve">
-    <value>Mov. Abajo</value>
+    <value>Mover abajo</value>
   </data>
   <data name="m_btnMoveDown.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 9.75pt</value>
@@ -397,7 +397,7 @@
     <value>4</value>
   </data>
   <data name="m_btnMoveDown.Text" xml:space="preserve">
-    <value>Mover &amp;abajo</value>
+    <value>Mover a&amp;bajo</value>
   </data>
   <data name="&gt;&gt;m_btnMoveDown.Name" xml:space="preserve">
     <value>m_btnMoveDown</value>
@@ -496,7 +496,7 @@
     <value>10</value>
   </data>
   <data name="mOKButton.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>A&amp;ceptar</value>
   </data>
   <data name="&gt;&gt;mOKButton.Name" xml:space="preserve">
     <value>mOKButton</value>
@@ -511,7 +511,7 @@
     <value>1</value>
   </data>
   <data name="$this.AccessibleName" xml:space="preserve">
-    <value>Unir proyecto</value>
+    <value>Fusionar proyecto</value>
   </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>8, 16</value>
@@ -526,7 +526,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Unir proyecto</value>
+    <value>Fusionar proyecto</value>
   </data>
   <data name="&gt;&gt;helpProvider1.Name" xml:space="preserve">
     <value>helpProvider1</value>
