--- a/trunk/Obi/Obi/Dialogs/ReportDialog.es.resx
+++ b/trunk/Obi/Obi/Dialogs/ReportDialog.es.resx
@@ -124,7 +124,7 @@
     <value>True</value>
   </metadata>
   <data name="m_lbDetailsOfErrors.AccessibleName" xml:space="preserve">
-    <value>Descripción de los detalles</value>
+    <value>Dscripción de los detalles</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="m_lbDetailsOfErrors.Location" type="System.Drawing.Point, System.Drawing">
@@ -169,7 +169,7 @@
     <value>2</value>
   </data>
   <data name="m_btnOk.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>&amp;OK</value>
   </data>
   <data name="&gt;&gt;m_btnOk.Name" xml:space="preserve">
     <value>m_btnOk</value>
