--- a/trunk/Obi/Obi/Dialogs/SectionProperties.es.resx
+++ b/trunk/Obi/Obi/Dialogs/SectionProperties.es.resx
@@ -403,7 +403,7 @@
     <value>13</value>
   </data>
   <data name="m_btnOk.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>&amp;OK</value>
   </data>
   <data name="&gt;&gt;m_btnOk.Name" xml:space="preserve">
     <value>m_btnOk</value>
@@ -559,7 +559,7 @@
     <value>4</value>
   </data>
   <data name="m_lblSectionTimePosition.Text" xml:space="preserve">
-    <value>Section Time Position:</value>
+    <value>Propiedades de la sección</value>
   </data>
   <data name="&gt;&gt;m_lblSectionTimePosition.Name" xml:space="preserve">
     <value>m_lblSectionTimePosition</value>
@@ -574,13 +574,13 @@
     <value>1</value>
   </data>
   <data name="m_txtSectionTimePosition.AccessibleName" xml:space="preserve">
-    <value>Section Time Position</value>
+    <value>Posición temporal de la sección</value>
   </data>
   <data name="m_txtSectionTimePosition.Location" type="System.Drawing.Point, System.Drawing">
-    <value>147, 76</value>
+    <value>170, 76</value>
   </data>
   <data name="m_txtSectionTimePosition.Size" type="System.Drawing.Size, System.Drawing">
-    <value>367, 22</value>
+    <value>347, 22</value>
   </data>
   <data name="m_txtSectionTimePosition.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
