--- a/trunk/Obi/Obi/Dialogs/SentenceDetection.es.resx
+++ b/trunk/Obi/Obi/Dialogs/SentenceDetection.es.resx
@@ -145,7 +145,7 @@
     <value>0</value>
   </data>
   <data name="mOKButton.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>A&amp;ceptar</value>
   </data>
   <data name="&gt;&gt;mOKButton.Name" xml:space="preserve">
     <value>mOKButton</value>
@@ -226,7 +226,7 @@
     <value>True</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 42</value>
+    <value>34, 42</value>
   </data>
   <data name="label2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
