--- a/trunk/Obi/Obi/Dialogs/SpecialPhraseList.es.resx
+++ b/trunk/Obi/Obi/Dialogs/SpecialPhraseList.es.resx
@@ -289,7 +289,7 @@
     <value>5</value>
   </data>
   <data name="m_btnOK.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>A&amp;ceptar</value>
   </data>
   <data name="&gt;&gt;m_btnOK.Name" xml:space="preserve">
     <value>m_btnOK</value>
