--- a/Obi/Obi/Dialogs/PhraseProperties.es.resx
+++ b/Obi/Obi/Dialogs/PhraseProperties.es.resx
@@ -148,7 +148,7 @@
     <value>0</value>
   </data>
   <data name="m_lblParentSection.Text" xml:space="preserve">
-    <value>Título de la &amp;sección Padre:</value>
+    <value>Título de la &amp;sección superior:</value>
   </data>
   <data name="&gt;&gt;m_lblParentSection.Name" xml:space="preserve">
     <value>m_lblParentSection</value>
@@ -163,13 +163,13 @@
     <value>22</value>
   </data>
   <data name="m_txtParentSection.AccessibleName" xml:space="preserve">
-    <value>Título de la sección Padre:</value>
+    <value>Título de la sección superior:</value>
   </data>
   <data name="m_txtParentSection.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
   </data>
   <data name="m_txtParentSection.Location" type="System.Drawing.Point, System.Drawing">
-    <value>250, 23</value>
+    <value>280, 23</value>
   </data>
   <data name="m_txtParentSection.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>6, 6, 6, 6</value>
@@ -229,7 +229,7 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="m_txtLocationInsideSection.Location" type="System.Drawing.Point, System.Drawing">
-    <value>240, 84</value>
+    <value>280, 84</value>
   </data>
   <data name="m_txtLocationInsideSection.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>6, 6, 6, 6</value>
@@ -343,7 +343,7 @@
     <value>12</value>
   </data>
   <data name="m_lblCustomClassName.Text" xml:space="preserve">
-    <value>Nombre de clase &amp;personalizado:</value>
+    <value>nombre de clase &amp;personalizado:</value>
   </data>
   <data name="&gt;&gt;m_lblCustomClassName.Name" xml:space="preserve">
     <value>m_lblCustomClassName</value>
@@ -415,7 +415,7 @@
     <value>19</value>
   </data>
   <data name="m_chkToDo.Text" xml:space="preserve">
-    <value>P&amp;or hacer</value>
+    <value>&amp;Pendiente</value>
   </data>
   <data name="&gt;&gt;m_chkToDo.Name" xml:space="preserve">
     <value>m_chkToDo</value>
@@ -448,7 +448,7 @@
     <value>20</value>
   </data>
   <data name="m_btnOk.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>A&amp;ceptar</value>
   </data>
   <data name="&gt;&gt;m_btnOk.Name" xml:space="preserve">
     <value>m_btnOk</value>
@@ -589,7 +589,7 @@
     <value>9</value>
   </data>
   <data name="m_lbParentsList.AccessibleName" xml:space="preserve">
-    <value>Seccion (es) anteriores:</value>
+    <value>Secciones anteriores:</value>
   </data>
   <data name="m_lbParentsList.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
@@ -604,7 +604,7 @@
     <value>6, 6, 6, 6</value>
   </data>
   <data name="helpProvider1.HelpNamespace" xml:space="preserve">
-    <value>Obi Help.chm</value>
+    <value>Secciones &amp;anteriores:</value>
   </data>
   <data name="m_lbParentsList.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -646,7 +646,7 @@
     <value>6</value>
   </data>
   <data name="groupBox1.Text" xml:space="preserve">
-    <value>Seccion (es) &amp;anteriores:</value>
+    <value>Detalles de número de página:</value>
   </data>
   <data name="&gt;&gt;groupBox1.Name" xml:space="preserve">
     <value>groupBox1</value>
@@ -694,7 +694,7 @@
     <value>7</value>
   </data>
   <data name="m_txtPageNumberDetails.AccessibleName" xml:space="preserve">
-    <value>Detalles de número de página:</value>
+    <value>Cambiar el número de página</value>
   </data>
   <data name="m_txtPageNumberDetails.Location" type="System.Drawing.Point, System.Drawing">
     <value>290, 541</value>
@@ -808,7 +808,7 @@
     <value>4</value>
   </data>
   <data name="m_lblCurrentCursorPosition.Text" xml:space="preserve">
-    <value>Current cursor position:</value>
+    <value>Posición actual del cursor:</value>
   </data>
   <data name="&gt;&gt;m_lblCurrentCursorPosition.Name" xml:space="preserve">
     <value>m_lblCurrentCursorPosition</value>
@@ -823,10 +823,10 @@
     <value>3</value>
   </data>
   <data name="m_txtCurrentCursorPosition.AccessibleName" xml:space="preserve">
-    <value>Current cursor position</value>
+    <value>Posición actual del cursor</value>
   </data>
   <data name="m_txtCurrentCursorPosition.Location" type="System.Drawing.Point, System.Drawing">
-    <value>240, 138</value>
+    <value>280, 138</value>
   </data>
   <data name="m_txtCurrentCursorPosition.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
@@ -853,7 +853,7 @@
     <value>True</value>
   </data>
   <data name="m_lbl_FileName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>111, 597</value>
+    <value>51, 597</value>
   </data>
   <data name="m_lbl_FileName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
@@ -865,7 +865,7 @@
     <value>16</value>
   </data>
   <data name="m_lbl_FileName.Text" xml:space="preserve">
-    <value>&amp;File name:</value>
+    <value>Nombre del &amp;Archivo.</value>
   </data>
   <data name="&gt;&gt;m_lbl_FileName.Name" xml:space="preserve">
     <value>m_lbl_FileName</value>
@@ -880,7 +880,7 @@
     <value>1</value>
   </data>
   <data name="m_txtFileName.AccessibleName" xml:space="preserve">
-    <value>file name</value>
+    <value>nombre del archivo</value>
   </data>
   <data name="m_txtFileName.Location" type="System.Drawing.Point, System.Drawing">
     <value>240, 597</value>
