--- a/Obi/Obi/Dialogs/ProfileDescription.es.resx
+++ b/Obi/Obi/Dialogs/ProfileDescription.es.resx
@@ -178,7 +178,7 @@
     <value>0</value>
   </data>
   <data name="$this.AccessibleName" xml:space="preserve">
-    <value>Descripción del Perfil de Audio</value>
+    <value>Descripción del perfil</value>
   </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
@@ -187,7 +187,7 @@
     <value>606, 517</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Descripción del Perfil de Audio</value>
+    <value>Descripción del perfil</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>ProfileDescription</value>
