--- a/Obi/Obi/Dialogs/SaveProjectAsDialog.es.resx
+++ b/Obi/Obi/Dialogs/SaveProjectAsDialog.es.resx
@@ -238,7 +238,7 @@
     <value>6</value>
   </data>
   <data name="mOKButton.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>A&amp;ceptar</value>
   </data>
   <data name="&gt;&gt;mOKButton.Name" xml:space="preserve">
     <value>mOKButton</value>
@@ -304,7 +304,7 @@
     <value>5</value>
   </data>
   <data name="mSwitchToNewCheckBox.Text" xml:space="preserve">
-    <value>C&amp;ambiar a la nueva copia</value>
+    <value>Ca&amp;mbiar a la nueva copia</value>
   </data>
   <data name="&gt;&gt;mSwitchToNewCheckBox.Name" xml:space="preserve">
     <value>mSwitchToNewCheckBox</value>
@@ -328,7 +328,7 @@
     <value>4</value>
   </data>
   <data name="m_ProjectNameTextBox.Text" xml:space="preserve">
-    <value>project.obi</value>
+    <value>proyecto</value>
   </data>
   <data name="&gt;&gt;m_ProjectNameTextBox.Name" xml:space="preserve">
     <value>m_ProjectNameTextBox</value>
