--- a/Obi/Obi/Dialogs/SelectMergeSectionRange.es.resx
+++ b/Obi/Obi/Dialogs/SelectMergeSectionRange.es.resx
@@ -181,7 +181,7 @@
     <value>6</value>
   </data>
   <data name="m_btn_SelectAll.Text" xml:space="preserve">
-    <value>Selección&amp;ar todo</value>
+    <value>Seleccinar &amp;todo</value>
   </data>
   <data name="&gt;&gt;m_btn_SelectAll.Name" xml:space="preserve">
     <value>m_btn_SelectAll</value>
@@ -220,7 +220,7 @@
     <value>Obi Help.chm</value>
   </data>
   <data name="m_btn_IncreaseSectionLevel.AccessibleName" xml:space="preserve">
-    <value>Aumentar nivel sección</value>
+    <value>Aumentar el nivel de la sección</value>
   </data>
   <data name="m_btn_IncreaseSectionLevel.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -241,7 +241,7 @@
     <value>9</value>
   </data>
   <data name="m_btn_IncreaseSectionLevel.Text" xml:space="preserve">
-    <value>&amp;Aumentar </value>
+    <value>&amp;Aumentar</value>
   </data>
   <data name="&gt;&gt;m_btn_IncreaseSectionLevel.Name" xml:space="preserve">
     <value>m_btn_IncreaseSectionLevel</value>
@@ -256,7 +256,7 @@
     <value>3</value>
   </data>
   <data name="m_btn_DecreaseSectionLevel.AccessibleName" xml:space="preserve">
-    <value>Disminuir nivel sección</value>
+    <value>Disminuir el nivel de la sección</value>
   </data>
   <data name="m_btn_DecreaseSectionLevel.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -292,7 +292,7 @@
     <value>2</value>
   </data>
   <data name="m_btn_Merge.AccessibleName" xml:space="preserve">
-    <value>Unir</value>
+    <value>Fusionar</value>
   </data>
   <data name="m_btn_Merge.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -313,7 +313,7 @@
     <value>8</value>
   </data>
   <data name="m_btn_Merge.Text" xml:space="preserve">
-    <value>&amp;Unir</value>
+    <value>&amp;Fusionar</value>
   </data>
   <data name="&gt;&gt;m_btn_Merge.Name" xml:space="preserve">
     <value>m_btn_Merge</value>
@@ -421,7 +421,7 @@
     <value>6</value>
   </data>
   <data name="m_btnPause.AccessibleName" xml:space="preserve">
-    <value>Pausar</value>
+    <value>Pausa</value>
   </data>
   <data name="m_btnPause.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -436,7 +436,7 @@
     <value>3</value>
   </data>
   <data name="m_btnPause.Text" xml:space="preserve">
-    <value>&amp;Pausar</value>
+    <value>&amp;Pausa</value>
   </data>
   <data name="m_btnPause.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -469,7 +469,7 @@
     <value>4</value>
   </data>
   <data name="m_btn_Stop.Text" xml:space="preserve">
-    <value>De&amp;tener</value>
+    <value>Dete&amp;ner</value>
   </data>
   <data name="&gt;&gt;m_btn_Stop.Name" xml:space="preserve">
     <value>m_btn_Stop</value>
@@ -499,7 +499,7 @@
     <value>3</value>
   </data>
   <data name="m_btn_Play.Text" xml:space="preserve">
-    <value>Re&amp;producir</value>
+    <value>&amp;Reproducir</value>
   </data>
   <data name="&gt;&gt;m_btn_Play.Name" xml:space="preserve">
     <value>m_btn_Play</value>
