--- a/Obi/Obi/Dialogs/SetPageNumber.es.resx
+++ b/Obi/Obi/Dialogs/SetPageNumber.es.resx
@@ -205,7 +205,7 @@
     <value>7</value>
   </data>
   <data name="mOKButton.Text" xml:space="preserve">
-    <value>&amp;Aceptar</value>
+    <value>A&amp;ceptar</value>
   </data>
   <data name="&gt;&gt;mOKButton.Name" xml:space="preserve">
     <value>mOKButton</value>
@@ -259,7 +259,7 @@
     <value>Flat</value>
   </data>
   <data name="mRenumber.Location" type="System.Drawing.Point, System.Drawing">
-    <value>139, 103</value>
+    <value>139, 130</value>
   </data>
   <data name="mRenumber.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
@@ -443,5 +443,38 @@
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="m_chkAutoFillPages.Text" xml:space="preserve">
+    <value>Paginación automática</value>
+  </data>
+  <data name="m_chkAutoFillPages.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="m_chkAutoFillPages.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Flat</value>
+  </data>
+  <data name="m_chkAutoFillPages.Location" type="System.Drawing.Point, System.Drawing">
+    <value>139, 102</value>
+  </data>
+  <data name="m_chkAutoFillPages.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
+  <data name="m_chkAutoFillPages.Size" type="System.Drawing.Size, System.Drawing">
+    <value>108, 20</value>
+  </data>
+  <data name="m_chkAutoFillPages.TabIndex" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="&gt;&gt;m_chkAutoFillPages.Name" xml:space="preserve">
+    <value>m_chkAutoFillPages</value>
+  </data>
+  <data name="&gt;&gt;m_chkAutoFillPages.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;m_chkAutoFillPages.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;m_chkAutoFillPages.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
 </root>
